@@ -1,11 +1,13 @@
 2.32.0 (??)
 ===========
 
+Safari:
+  * The Safari extension is now packaged with the gem and automatically installed (#5322)
 Opera:
   * Allow passing :desired_capabailities (#5279)
 Other:
   * Allow #click_and_hold without target (#5410).
-
+  * Remove assumptions about returned capabilities (for ios-driver)
 
 2.31.0 (2013-03-02)
 ===================
